--- a/MultiPlastApp/nbproject/private/private.properties
+++ b/MultiPlastApp/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\maria\\AppData\\Roaming\\NetBeans\\23\\build.properties
+user.properties.file=C:\\Users\\sebac.DESKTOP-K5S00FB\\AppData\\Roaming\\NetBeans\\22\\build.properties
